page sections all fixed...

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Log in</a></li>
-                    <li><button>Sign up</button>
+                    <li><button>Sign up</button></li>
+                </ul>
             </nav>
             <div id="headertext">
                 <h2>SHARE YOUR <br/> HOLIDAY DREAM</h2>
