--- a/other files/index.html
+++ b/other files/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dreamshare</title>
-    <link href="styles_edit.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -47,9 +47,9 @@
             <ul>
                 <li>
                     <div class="partner-avatar">
-                        <img class="photo" src="dreamshare_assets/assets/partner1.jpg" alt="partner1">
+                        <img class="photo" src="../dreamshare_assets/assets/partner1.jpg" alt="partner1">
                         <figure class="svg-container" id="music">
-                            <img class="svg-icon" src="dreamshare_assets/assets/music.svg">
+                            <img class="svg-icon" src="../dreamshare_assets/assets/music.svg">
                         </figure>
                     </div>
                     <h4>Bradley Hunter</h4>
@@ -57,9 +57,9 @@
                 </li>
                 <li>
                     <div class="partner-avatar">
-                        <img class="photo" src="dreamshare_assets/assets/partner2.jpg" alt="partner2">
+                        <img class="photo" src="../dreamshare_assets/assets/partner2.jpg" alt="partner2">
                         <figure class="svg-container" id="brush">
-                            <img class="svg-icon" src="dreamshare_assets/assets/brush.svg">
+                            <img class="svg-icon" src="../dreamshare_assets/assets/brush.svg">
                         </figure>
                     </div>                    
                     <h4>Marie Bennet</h4>
@@ -67,9 +67,9 @@
                 </li>
                 <li>
                     <div class="partner-avatar">
-                        <img class="photo" src="dreamshare_assets/assets/partner3.jpg" alt="partner3">
+                        <img class="photo" src="../dreamshare_assets/assets/partner3.jpg" alt="partner3">
                         <figure class="svg-container" id="camera">
-                            <img class="svg-icon" src="dreamshare_assets/assets/camera.svg">
+                            <img class="svg-icon" src="../dreamshare_assets/assets/camera.svg">
                         </figure>
                     </div>                    
                     <h4>Diana Wells</h4>
@@ -77,9 +77,9 @@
                 </li>
                 <li>
                     <div class="partner-avatar">
-                        <img class="photo" src="dreamshare_assets/assets/partner4.jpg" alt="partner4">
+                        <img class="photo" src="../dreamshare_assets/assets/partner4.jpg" alt="partner4">
                         <figure class="svg-container" id="airplane">
-                            <img class="svg-icon" src="dreamshare_assets/assets/airplane.svg">
+                            <img class="svg-icon" src="../dreamshare_assets/assets/airplane.svg">
                         </figure>
                     </div>
                     <h4>Christopher Pierce</h4>
@@ -91,34 +91,40 @@
         <section id="holiday">
             <h3 class="headings">Discover holiday activity ideas</h3>
             <div class="holiday-activity">
-                <figure>
-                    <img class="image-thumb" src="dreamshare_assets/assets/block1Sports.jpg">
-                    <h4 class="text-over-img" id="dark-grey">Sports</h4>
-                </figure>
-                <figure>
-                    <img class="image-thumb" src="dreamshare_assets/assets/block2Wellness.jpg">
-                    <h4 class="text-over-img">Wellness and Health</h4>
-                </figure>
-                <figure>
-                    <img class="image-thumb" src="dreamshare_assets/assets/block3Expeditions.jpg">
-                    <h4 class="text-over-img">Expeditions</h4>
-                </figure>
-                <figure>
-                    <img class="image-thumb" src="dreamshare_assets/assets/block4Games.jpg">
-                    <h4 class="text-over-img">Games</h4>
-                </figure>
-                <figure>
-                    <img class="image-thumb" src="dreamshare_assets/assets/block5Culture.jpg">
-                    <h4 class="text-over-img">Culture and Education</h4>
-                </figure>
-                <figure>
-                    <img class="image-thumb" src="dreamshare_assets/assets/block6Beauty.jpg">
-                    <h4 class="text-over-img">Beauty and Relaxation</h4>
-                </figure>
-                <figure>
-                    <img class="image-thumb" src="dreamshare_assets/assets/block7Travelling.jpg">
-                    <h4 class="text-over-img">Travelling</h4>
-                </figure>
+                <div class="img-container">
+                    <figure>
+                        <img class="image-thumb" src="../dreamshare_assets/assets/block1Sports.jpg">
+                        <h4 class="text-over-img" id="dark-grey">Sports</h4>
+                    </figure>
+                    <figure>
+                        <img class="image-thumb" src="../dreamshare_assets/assets/block2Wellness.jpg">
+                        <h4 class="text-over-img">Wellness and Health</h4>
+                    </figure>
+                    <figure>
+                        <img class="image-thumb" src="../dreamshare_assets/assets/block3Expeditions.jpg">
+                        <h4 class="text-over-img">Expeditions</h4>
+                    </figure>
+                </div>  
+                <div class="img-container">
+                    <figure>
+                        <img class="image-thumb" src="../dreamshare_assets/assets/block4Games.jpg">
+                        <h4 class="text-over-img">Games</h4>
+                    </figure>
+                    <figure>
+                        <img class="image-thumb" src="../dreamshare_assets/assets/block5Culture.jpg">
+                        <h4 class="text-over-img">Culture and Education</h4>
+                    </figure>
+                </div>
+                <div class="img-container">
+                    <figure>
+                        <img class="image-thumb" src="../dreamshare_assets/assets/block6Beauty.jpg">
+                        <h4 class="text-over-img">Beauty and Relaxation</h4>
+                    </figure>
+                    <figure>
+                        <img class="image-thumb" src="../dreamshare_assets/assets/block7Travelling.jpg">
+                        <h4 class="text-over-img">Travelling</h4>
+                    </figure>
+                </div>
             </div>                   
         </section>
     </main>
@@ -164,6 +170,6 @@
              </div>
             </div>        
     </footer> 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
